implemented notification and messaging in real-time
